added testing configurations   in pom